--- a/resources/assets/ts/app/register-page/register.component.html
+++ b/resources/assets/ts/app/register-page/register.component.html
@@ -8,8 +8,8 @@
                 </div>
                 <div class="panel-body">
                     <form role="form" novalidate [formGroup]="register_form" (submit)="registerUser()">
-                        <p>Form value: {{ register_form.value | json }}</p>
-                        <p>Form status: {{ register_form.status | json }}</p>
+                        <!--<p>Form value: {{ register_form.value | json }}</p>-->
+                        <!--<p>Form status: {{ register_form.status | json }}</p>-->
                         <fieldset>
                             <div class="form-group">
                                 <input class="form-control" placeholder="Full name" name="name" formControlName="name" type="text" autofocus
