--- a/resources/assets/ts/app/app.component.html
+++ b/resources/assets/ts/app/app.component.html
@@ -1,1 +1,16 @@
+<section id="logo-section" class="text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <a routerLink="/">
+                    <div class="logo text-center">
+                        <h1>{{ username }}</h1>
+                        <span>Welcome to your profile page</span>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
 <router-outlet></router-outlet>
