New classes for teachers

--- a/resources/assets/ts/app/app.component.scss
+++ b/resources/assets/ts/app/app.component.scss
@@ -1,4 +1,5 @@
 @import "../../scss/variables";
+@import "../../../../node_modules/ng-pick-datetime/assets/style/picker.min.css";
 
 // Global Styles
 
