--- a/resources/assets/ts/app/pages/homepage/homepage.component.html
+++ b/resources/assets/ts/app/pages/homepage/homepage.component.html
@@ -15,9 +15,9 @@
                     </a>
                 </div>
                 <div class="menu-item green">
-                    <a href="#portfolio-modal" data-toggle="modal">
+                    <a routerLink="{{ class_link }}" data-toggle="modal">
                         <i class="fa fa-file-photo-o"></i>
-                        <p>Portfolio</p>
+                        <p>Classes</p>
                     </a>
                 </div>
                 <div class="menu-item light-red">
